# django-bulk-triggers

./: ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE_REFACTOR_COMPLETE.md  ARCHITECTURE_REFINED.md  ARCHITECTURE_SIMPLIFIED.md  BATCH_SIZE_FIX_SUMMARY.md  FIX_SUMMARY.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_SUMMARY.md  MANIFEST.in  N+1_QUERY_ANALYSIS.md  NESTED_CONTAINER_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  debug_augend_manager.py  example_currentuser_usage.py  example_lambda_conditions.py  example_ordering_fix.py  example_usage.py  plan.md  pyproject.toml  pytest.ini  test_balance_fix.py  test_debug.py  test_hook_persistence.py  test_lambda_conditions.py  test_n1_fix.py  test_ordering_fix.py  test_select_related.py  test_subquery_fix.py
django-bulk-signals/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  COMPARISON.md  COUPLING_COMPARISON.md  IMPROVED_ARCHITECTURE.md  PRODUCTION_SETUP.md  README.md  SUMMARY.md  ZERO_COUPLING_SOLUTION.md  example.py  example_settings.py  example_simple.py  pyproject.toml  run_tests.py  setup.py  test_simple.py
django-bulk-signals/django_bulk_signals/: __init__.py  __init___simple.py  apps.py  conditions.py  conditions_simple.py  config.py  core.py  decorators.py  decorators_simple.py  executors.py  initialization.py  manager.py  models.py  queryset.py  services.py  settings.py  signals.py
django-bulk-signals/tests/: __init__.py  conftest.py  models.py  settings.py  test_conditions.py  test_decorators.py  test_example.py  test_field_detection.py  test_integration.py  test_models.py  test_queryset.py  test_signals.py
django_bulk_hooks/: __init__.py  conditions.py  constants.py  context.py  decorators.py  engine.py  enums.py  handler.py  manager.py  models.py  multi_table_bulk_create_manager.py  priority.py  queryset.py  registry.py
django_bulk_lifecycle/: __init__.py  conditions.py  constants.py  context.py  decorators.py  engine.py  enums.py  handler.py  manager.py  models.py  priority.py  registry.py
django_bulk_triggers/: __init__.py  bulk_operations.py  changeset.py  conditions.py  constants.py  context.py  core.py  debug_utils.py  decorators.py  dispatcher.py  engine.py  enums.py  factory.py  field_operations.py  handler.py  helpers.py  logging_config.py  manager.py  models.py  mti_operations.py  operations.py  priority.py  queryset.py  queryset_new.py  queryset_old.py  queryset_temp.py  recursion.py  registry.py  services.py  trigger_operations.py  validation_operations.py
tests/: README.md  (+44 more)
(+9 files in other folders)
